fixed z-index for responsive nav
https://app.asana.com/0/11140166463836/19967589859073

--- a/elements/upfront-newnavigation/css/unewnavigation-style.css
+++ b/elements/upfront-newnavigation/css/unewnavigation-style.css
@@ -233,7 +233,9 @@ div.upfront-navigation div[data-style="burger"] ul.menu > li > ul > li > ul > li
 div.upfront-navigation div[data-style="burger"] ul.menu > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul > li a {
   padding-left:110px;
 }
-
+.on_the_top {
+  z-index:99999;
+}
 
 /* Accomodate Floating Nav */
 [data-already_floating="yes"] {
